syntax = "proto3";

package auth_service;

service AuthService {
    rpc verify_token(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    optional string user_id = 1;
}
